# sdk-nrf

boards/nordic/nrf7120pdk/: nrf7120pdk_nrf7120_cpuapp_defconfig
soc/nordic/nrf71/: soc.c
subsys/nrf_security/src/: psa_crypto_driver_wrappers.c
subsys/nrf_security/src/drivers/: CMakeLists.txt
subsys/nrf_security/src/drivers/wifi_crypto/: CMakeLists.txt
subsys/nrf_security/src/drivers/wifi_crypto/wifi_crypto/: wifi_crypto.cmake
subsys/nrf_security/src/drivers/wifi_crypto/wifi_crypto/include/: wifi_crypto.h
subsys/nrf_security/src/drivers/wifi_crypto/wifi_crypto/src/: wifi_crypto.c
tests/wifi/crypto/: prj.conf
tests/wifi/crypto/src/: ipc_if.h  main.c
